# gnujump

./: AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool  sdljump.6  sdljump.kdevelop  sdljump.kdevelop.pcs  tailor.config
doc/: Makefile  Makefile.am  Makefile.in  gnujump.6
lang/: Makefile.am  Makefile.in  english.lang  polish.lang  spanish.lang
po/: ChangeLog  Makefile.in  Makevars  POTFILES.in  it.po  tr.po
skins/: Makefile  Makefile.am  Makefile.in
skins/auri/: Makefile  Makefile.am  Makefile.in  config.theme  fontsrc.xcf  gamebg.xcf  gamebg2.xcf  hero1.anim  menu.xcf  over.anim
skins/auri/heroanim1/: Makefile  Makefile.in  jump.0.xcf  run.1.xcf  run.anim~  stand.0.xcf  stand.anim~
skins/auri/heroanim2/: Makefile  Makefile.am  Makefile.in  jump.anim  run.0.xcf  run.anim  stand.anim  stand.anim~
skins/auri/heroanim3/: Makefile  Makefile.in  jump.anim  run.anim  run.anim~  stand.anim
skins/auri/heroanim4/: Makefile  Makefile.in  jump.anim  jump.anim~  run.2.xcf  run.anim  stand.anim
skins/default/: Makefile  Makefile.in  config.theme  gamebg.xcf  gamebg2.xcf
skins/default/cursor/: Makefile  Makefile.am  Makefile.am~  Makefile.in  down.anim  down.anim~  idle.anim~  over.anim~
skins/sdljump/: Makefile.am  config.theme  hero0.anim  hero3.anim  menu2.xcf
skins/sdljump/cursor/: Makefile.am  over.anim
skins/wincrash/: Makefile  Makefile.am  Makefile.am~  Makefile.in  config.theme  config.theme~  down.anim  gamebg.xcf  idle.anim  menu.xcf
skins/wincrash/heroanim1/: 0.xpm  5.xpm  6.xpm  Makefile  Makefile.am  Makefile.in  run.anim  run.anim~  stand.anim  stand.anim~
skins/wincrash/heroanim2/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  Makefile  Makefile.am  Makefile.am~  Makefile.in  jump.anim  run.anim  stand.anim
skins/wincrash/heroanim3/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  Makefile  Makefile.am  Makefile.am~  Makefile.in  jump.anim  jump.anim~  run.anim  stand.anim
skins/wincrash/heroanim4/: 0.xpm  1.xpm  2.xpm  3.xpm  4.xpm  5.xpm  6.xpm  Makefile  Makefile.am  Makefile.in  jump.anim  run.anim  stand.anim
skins/xjump/: Makefile  Makefile.am  Makefile.in  config.theme  down.anim  gamebg.xcf  hero2.anim  idle.anim  idle.anim~  menu.xcf
sound/: Bad_Moon_Rising.mid  Makefile  Makefile.am~  Makefile.in  Midnight_Special.mid  config.sounds
src/: Makefile  Makefile.am  Makefile.in  SDL_2dgl.c  SDL_2dgl.h  SDL_rotozoom.c  SDL_rotozoom.h  SFont.c  SFont.h  effects-blur.c  effects-trail.c  effects.c  effects.h  game-input.c  game-logic.c  game-output.c  game-timer.c  game-tools.c  game.c  game.h  gettext.h  gnujump.h  lang.h  main.c  menu-system.c  menu.c  menu.h  records.c  records.h  replay.c  replay.h  sdljump  sdljump.h  setup.c  setup.h  sprite.c  sprite.h  surface.c  surface.h  timer.c  (+2 more)
src/win/: scandir.c
