AC_INIT(configure.in)

AC_CANONICAL_BUILD
AC_CANONICAL_TARGET

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnujump, 1.0.5)

AM_GNU_GETTEXT([external])

SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)
CFLAGS="$CFLAGS $SDL_CFLAGS -Wall"
LIBS="$LIBS $SDL_LIBS"

AX_CHECK_GL
AX_CHECK_GLU
CFLAGS="$CFLAGS $GL_CFLAGS $GLU_CFLAGS"
LIBS="$LIBS $GL_LIBS $GLU_LIBS"

dnl Checks for header files.

AC_CHECK_HEADER([SDL/SDL_image.h],
		:,
		[ AC_MSG_ERROR([*** Could not find SDL/SDL_image.h ! Install the SDL_image devel package.]) ]
)
LIBS="$LIBS -lSDL_image"

AC_CHECK_HEADER([SDL/SDL_mixer.h],
		:,
		[ AC_MSG_ERROR([*** Could not find SDL/SDL_mixer.h ! Install the SDL_mixer devel package.]) ]
)
LIBS="$LIBS -lSDL_mixer"

dnl Set PACKAGE PREFIX
if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

CFLAGS="$CFLAGS -DPREFIX=\\\"$packageprefix\\\" -DDATA_PREFIX=\\\"$datadir\\\""

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_OUTPUT(
		Makefile  
		po/Makefile.in
		src/Makefile
		doc/Makefile
		sound/Makefile
		skins/Makefile
		skins/default/Makefile
		skins/default/cursor/Makefile
		skins/xjump/Makefile
		skins/auri/Makefile
		skins/auri/heroanim1/Makefile
		skins/auri/heroanim2/Makefile
		skins/auri/heroanim3/Makefile
		skins/auri/heroanim4/Makefile
		skins/wincrash/Makefile
		skins/wincrash/heroanim1/Makefile
		skins/wincrash/heroanim2/Makefile
		skins/wincrash/heroanim3/Makefile
		skins/wincrash/heroanim4/Makefile
)

