#
# GNUjump
# =======
#
# Copyright (C) 2005-2008, Juan Pedro Bolivar Puente
#
# GNUjump is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# GNUjump is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

AC_INIT(configure.in)

AC_CANONICAL_BUILD
AC_CANONICAL_TARGET

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gnujump, 1.0.8)

ALL_LINGUAS="tr it"

AM_GNU_GETTEXT([external])

SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]))
CFLAGS="$CFLAGS $SDL_CFLAGS -Wall"
LIBS="$LIBS $SDL_LIBS"

AX_CHECK_GL
AX_CHECK_GLU
AC_SUBST(GL_CFLAGS)
AC_SUBST(GLU_CFLAGS)

CFLAGS="$CFLAGS $GL_CFLAGS $GLU_CFLAGS"
LIBS="$LIBS $GL_LIBS $GLU_LIBS"

# Checks for header files.

AC_CHECK_HEADER([SDL/SDL_image.h],
		:,
		[ AC_MSG_ERROR([*** Could not find SDL/SDL_image.h ! Install the SDL_image devel package.]) ]
)
LIBS="$LIBS -lSDL_image"

AC_CHECK_HEADER([SDL/SDL_mixer.h],
		:,
		[ AC_MSG_ERROR([*** Could not find SDL/SDL_mixer.h ! Install the SDL_mixer devel package.]) ]
)
LIBS="$LIBS -lSDL_mixer"

# Set PACKAGE PREFIX

if test "x${prefix}" = "xNONE"; then
  packageprefix=${ac_default_prefix}
else
  packageprefix=${prefix}
fi

CFLAGS="$CFLAGS -g -DPREFIX=\\\"$packageprefix\\\" -DDATA_PREFIX=\\\"$datadir\\\""

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_OUTPUT(
		Makefile  
		po/Makefile.in
		src/Makefile
		doc/Makefile
		sound/Makefile
		skins/Makefile
		skins/default/Makefile
		skins/default/cursor/Makefile
		skins/sdljump/Makefile
		skins/sdljump/cursor/Makefile
		skins/xjump/Makefile
		skins/auri/Makefile
		skins/auri/heroanim1/Makefile
		skins/auri/heroanim2/Makefile
		skins/auri/heroanim3/Makefile
		skins/auri/heroanim4/Makefile
		skins/wincrash/Makefile
		skins/wincrash/heroanim1/Makefile
		skins/wincrash/heroanim2/Makefile
		skins/wincrash/heroanim3/Makefile
		skins/wincrash/heroanim4/Makefile
)

