bin_PROGRAMS = sdljump


# set the include path found by configure
INCLUDES = $(all_includes)

# the library search path.
sdljump_LDFLAGS = $(all_libraries) 
sdljump_SOURCES = game.c game.h main.c menu.c menu.h records.c records.h \
		SDL_2dgl.c SDL_2dgl.h sdljump.h SDL_rotozoom.c SDL_rotozoom.h setup.c setup.h \
		SFont.c SFont.h sprite.c sprite.h surface.c surface.h tools.c tools.h replay.c \
		replay.h lang.h
datadirdir = $(prefix)/share/$(package)
